--- a/PyCitySchools/PyCitySchools_Final.ipynb
+++ b/PyCitySchools/PyCitySchools_Final.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 289,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "15"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "39170"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "24649428"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "74.9808526933878"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "85.80546336482001"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "65.17232575950983"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 246,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "Name: school_name, dtype: int64"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
        "Name: budget, dtype: float64"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -885,7 +885,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 273,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -1058,7 +1058,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 274,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1066,10 @@
    "source": [
     "# Sort the schools by `% Overall Passing` in descending order and display the top 5 rows.\n",
     "highest_performing = per_school_summary.sort_values([\"% Overall Passing\"],ascending=False)\n",
-    "highest_performing.head()"
+    "\n",
+    "top_schools = pd.DataFrame(highest_performing)\n",
+    "\n",
+    "top_schools.head()"
    ]
   },
   {
@@ -1078,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -1210,7 +1213,7 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 275,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1221,8 @@
    "source": [
     "# Sort the schools by `% Overall Passing` in ascending order and display the top 5 rows.\n",
     "lowest_performing = per_school_summary.sort_values([\"% Overall Passing\"],ascending=True)\n",
-    "lowest_performing.head()"
+    "bottom_schools = pd.DataFrame(lowest_performing)\n",
+    "bottom_schools.head()"
    ]
   },
   {
@@ -1230,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -1391,7 +1395,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1409,11 +1413,11 @@
     "eleventh_graders_scores = eleventh_graders.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
     "twelfth_graders_scores = twelfth_graders.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
     "\n",
-    "\"\"\"\"\n",
+    "\"\"\"\n",
     "# Use the code to select only the `math_score`.\n",
     "ninth_grade_math_scores = ninth_graders_scores[\"math_score\"]\n",
     "tenth_grader_math_scores = tenth_graders_scores[\"math_score\"]\n",
-    "eleventh_grader_math_scores = eleventh_graders_scores.mean()[\"math_score\"]\n",
+    "eleventh_grader_math_scores = eleventh_graders_scores[\"math_score\"]\n",
     "twelfth_grader_math_scores = twelfth_graders_scores[\"math_score\"]\n",
     "\"\"\"\n",
     "\n",
